--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
         <!-- injector:css -->
         <link rel="stylesheet" href="css/customcordova.css">
         <link rel="stylesheet" href="css/demo.css">
+        <link rel="stylesheet" href="css/recollectionStyles.css">
         <!-- endinjector -->
     <!-- endbuild -->
     <script src="cordova.js"></script>
@@ -28,7 +29,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand visible-xs" href="#">
-                        angularjsapp
+                        recollectionProject
                     </a>
                 </div>
             </div>
@@ -40,7 +41,7 @@
         <header class="bs-header text-center" id="overview">
             <div class="container">
                 <h1 id="app-heading">
-                    AngularJs Cordova application
+                    The<br/> Recollection<br/> Project
                 </h1>
             </div>
         </header>
