--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <!-- build:css styles/custom.css -->
         <!-- injector:css -->
         <link rel="stylesheet" href="css/customcordova.css">
+        <link rel="stylesheet" href="css/demo.css">
         <link rel="stylesheet" href="css/recollectionStyles.css">
         <!-- endinjector -->
     <!-- endbuild -->
