--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -1,49 +1,1 @@
-<!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
-<html>
-    <head>
-        <!--
-        Customize this policy to fit your own app's needs. For more guidance, see:
-            https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-        Some notes:
-            * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-            * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-            * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-                * Enable inline JS: add 'unsafe-inline' to default-src
-        -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-    </body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"><title></title><meta name="description" content=""><meta name="viewport" content="width=device-width"><link rel="stylesheet" href="styles/vendor.css"><link rel="stylesheet" href="styles/custom.css"><script src="cordova.js"></script></head><body><!-- =================== Navigation bar =================== --><header class="navbar navbar-default navbar-fixed-top"><div class="navbar-inner"><div class="container"><div class="navbar-header"><a class="navbar-brand visible-xs" href="#">a guided journal</a> <button type="button" class="navbar-toggle"><span class="sr-only">Toggle Navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button></div><ul class="nav navbar-nav navbar-right collapse navbar-collapse"><li>New Entry</li><li>Past Entry</li><li>Guidance</li><li>New Tag</li><li>Search by Tag</li></ul></div></div></header><div class="header-placeholder"></div><div role="main"><header class="bs-header text-center" id="overview"><div class="container"><h1 id="app-heading">The<br>Recollection<br>Project</h1></div></header><div class="container"><div class="row"><div class="col-md-12"><section id="uiview" ui-view=""></section></div></div></div><!-- /.container --></div><!-- /.main --><footer class="footer"><div class="container"><div class="rows"></div></div></footer><script src="scripts/vendor.js"></script><script src="scripts/custom.js"></script></body></html>
