--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
         <div class="navbar-inner">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand visible-xs" href="#">
+                    <a class="navbar-brand visible-xs" href="/#!/home">
                         a guided journal
                     </a>
                     <button type="button" class="navbar-toggle">
@@ -38,13 +38,14 @@
                         <span class="icon-bar"></span>
                     </button>
                 </div>
-                    <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-                        <li>New Entry</li>
+                    <!--Tabbed Navigation and Responsive Hamburger-->
+                    <!-- <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
+                        <a href="/"><li>New Entry</li></a>
                         <li>Past Entry</li>
                         <li>Guidance</li>
                         <li>New Tag</li>
                         <li>Search by Tag</li>
-                    </ul>
+                    </ul> -->
             </div>
         </div>
     </header>
