--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" ng-href="#">
-                        home
+                        Home
                     </a>
                     <button type="button" class="navbar-toggle">
                         <span class="sr-only">Toggle Navigation</span>
@@ -110,6 +110,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+        <!--<script src="scripts/jquery.serialize-object.min.js"></script>-->
         <!-- endbuild -->
 </body>
 </html>
