--- a/app/index.html
+++ b/app/index.html
@@ -109,8 +109,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
-        <!--<script src="scripts/jquery.serialize-object.min.js"></script>-->
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+       <script src="scripts/sugar.js"></script>
+        <script src="scripts/weather.js"></script>
         <!-- endbuild -->
 </body>
 </html>
