--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/recollectionStyles.css">
+    <link rel='stylesheet' href='styles/fullcalendar.css' />
     <!-- endbuild -->
   </head>
   <body ng-app="recollectionApp">
@@ -112,6 +113,8 @@
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
        <script src="scripts/sugar.js"></script>
         <script src="scripts/weather.js"></script>
+        <script src='scripts/moment.js'></script>
+        <script src='scripts/fullcalendar.js'></script>
         <!-- endbuild -->
 </body>
 </html>
