--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,7 @@
         <script src="scripts/weather.js"></script>
         <script src='scripts/moment.js'></script>
         <script src='scripts/fullcalendar.js'></script>
+        <script src="scripts/prettyprint.js"></script>
         <!-- endbuild -->
 </body>
 </html>
